# kafka-dump

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md
.github/workflows/: release.yml
config/: defaults.toml
src/: dumper.rs  main.rs
src/dumper/: mod.rs  slice.rs
src/guard/: mod.rs
src/kafka/: consumer.rs  producer.rs
src/settings/: mod.rs
